font-awesome install,  user data map

--- a/profile-view/src/components/UserProfile/UserProfile.scss
+++ b/profile-view/src/components/UserProfile/UserProfile.scss
@@ -3,7 +3,7 @@
         max-width: 1024px;
         width: 100%;
         background: #fff;
-        margin: 40px auto 0;
+        margin: 40px auto 100px;
         border: 1px solid #ccc;
     }
     &__displayer {
