--- a/profile-view/src/components/UserProfile/UserProfile.scss
+++ b/profile-view/src/components/UserProfile/UserProfile.scss
@@ -7,6 +7,6 @@
         border: 1px solid #ccc;
     }
     &__displayer {
-        padding: 40px 15px;
+        padding: 45px 60px 45px 40px;
     }
 }
