--- a/profile-view/src/components/UserProfile/About/About.scss
+++ b/profile-view/src/components/UserProfile/About/About.scss
@@ -3,6 +3,7 @@
         background: #fff;
         width: 100%;
         color: #000;
+        padding-bottom: 100px;
     }
     &-header {
         &__name {
