--- a/profile-view/src/components/UserProfile/About/About.scss
+++ b/profile-view/src/components/UserProfile/About/About.scss
@@ -27,6 +27,7 @@
     }
     &-text {
         margin-top: 30px;
+        padding-right: 45px;
         &__first {
             margin-bottom: 40px;
         }
