--- a/profile-view/src/components/UserProfile/UserProfile.scss
+++ b/profile-view/src/components/UserProfile/UserProfile.scss
@@ -7,6 +7,7 @@
         border: 1px solid #ccc;
     }
     &__displayer {
-        padding: 45px 40px;
+        padding: 60px 40px 40px;
+        height: 570px;
     }
 }
