--- a/profile-view/src/components/UserProfile/Gallery/Gallery.scss
+++ b/profile-view/src/components/UserProfile/Gallery/Gallery.scss
@@ -5,6 +5,7 @@
         display: flex;
         flex-wrap: wrap;
         padding-left: 0;
+        justify-content: center;
     }
     &-box {
         flex: 0 0 31%;
@@ -23,8 +24,46 @@
             img {
                 width: 100%;
                 height: auto;
+                object-fit: fill;
                 opacity: .8;
                 transition: all .4s ease-in-out;
+            }
+        }
+    }
+}
+
+@media(max-width: 880px) {
+    .gallery {
+        &-box {
+            flex: 0 0 45%;
+        }
+    }
+}
+@media(max-width: 650px) {
+    .gallery {
+        &-box {
+            &__picture {
+                img {
+                    height: 100%;
+                    object-fit: fill;
+                    opacity: 1;
+                }
+            }
+        }
+    }
+}
+@media(max-width: 500px) {
+    .gallery {
+        &-box {
+            flex: 0 0 100%;
+            height: 220px;
+            margin-right: 0;
+            &__picture {
+                img {
+                    height: auto;
+                    object-fit: fill;
+                    opacity: 1;
+                }
             }
         }
     }
