--- a/profile-view/src/components/UserProfile/About/About.scss
+++ b/profile-view/src/components/UserProfile/About/About.scss
@@ -31,12 +31,41 @@
             margin-bottom: 40px;
         }
         &__quote {
+            width: 60%;
             padding-left: 30px;
             border-left: 4px solid #7AD6BB;
             margin-bottom: 40px;
             color: #ccc;
             font-style: italic;
             font-size: 18px;
+        }
+    }
+}
+
+@media(max-width: 650px) {
+    .about {
+        &-text {
+            &__quote {
+                width: 75%;
+                font-size: 16px;
+            }
+        }
+    }
+}
+@media(max-width: 500px) {
+    .about {
+        &-header {
+            &__name {
+                font-size: 24px;
+            }
+        }
+        &-text {
+            font-size: 14px;
+            &__quote {
+                width: 80%;
+                font-size: 16px;
+                margin-left: 10px;
+            }
         }
     }
 }
